--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/FindDialog.form
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/FindDialog.form
@@ -8,6 +8,7 @@
     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
       <Font name="ActionIs" size="10" style="0"/>
     </Property>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -24,7 +25,6 @@
     <Component class="javax.swing.JComboBox" name="patternComboBox">
       <Properties>
         <Property name="editable" type="boolean" value="true"/>
-        <Property name="focusCycleRoot" type="boolean" value="true"/>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[80, 24]"/>
         </Property>
