--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/MainWindow.form
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/MainWindow.form
@@ -474,6 +474,9 @@
     <SyntheticProperty name="menuBar" type="java.lang.String" value="menuBar"/>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="windowDeactivated" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowDeactivated"/>
+  </Events>
   <AuxValues>
     <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,43,0,0,2,19"/>
   </AuxValues>
@@ -705,6 +708,7 @@
                             <Property name="requestFocusEnabled" type="boolean" value="false"/>
                           </Properties>
                           <Events>
+                            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="valuesTableMouseClicked"/>
                             <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="valuesTableMousePressed"/>
                           </Events>
                           <AuxValues>
@@ -716,10 +720,19 @@
                     </Container>
                     <Container class="javax.swing.JPanel" name="editorPanel">
                       <Properties>
+                        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                          <Dimension value="null"/>
+                        </Property>
+                        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                          <Dimension value="null"/>
+                        </Property>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[233, 60]"/>
                         </Property>
                       </Properties>
+                      <AuxValues>
+                        <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="_context.getUIPersisteer ().register (new PersistencePanelAdapter (editorPanel, &quot;editorPanel&quot;));"/>
+                      </AuxValues>
                       <Constraints>
                         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout$JSplitPaneConstraintsDescription">
                           <JSplitPaneConstraints position="bottom"/>
@@ -817,7 +830,7 @@
                               </Events>
                               <AuxValues>
                                 <AuxValue name="generateMnemonicsCode" type="java.lang.Boolean" value="true"/>
-                                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="valuesTable.getSelectionModel ().addListSelectionListener (new ListSelectionListener (){&#xa;&#x9;&#x9;public void valueChanged(ListSelectionEvent e){&#xa;&#x9;&#x9;&#x9;deleteEntryButton.setEnabled (valuesTable.getSelectedRowCount ()&gt;0);&#xa;&#x9;&#x9;}&#xa;&#x9;});"/>
+                                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="valuesTable.getSelectionModel ().addListSelectionListener (new ListSelectionListener (){&#xa;&#x9;&#x9;public void valueChanged(ListSelectionEvent e){&#xa;&#x9;&#x9;&#x9;if (e.getValueIsAdjusting ()){&#xa;&#x9;&#x9;&#x9;&#x9;return;&#xa;&#x9;&#x9;&#x9;}&#xa;&#x9;&#x9;&#x9;deleteEntryButton.setEnabled (valuesTable.getSelectedRowCount ()&gt;0);&#xa;&#x9;&#x9;}&#xa;&#x9;});"/>
                               </AuxValues>
                               <Constraints>
                                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
